// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Books should render Books 1`] = `
<div>
  <div
    class="sc-iBPRYJ gokKvP"
  >
    <h3
      class="sc-jSgupP lnXuzl"
    >
      Find My Books
    </h3>
    <div
      style="display: flex; align-items: center; padding: 16px 0px;"
    >
      Show
      <button
        class="sc-gKsewC jyHuJi"
        data-testid="10"
        id="10"
        name="10"
      >
        10
      </button>
      <button
        class="sc-gKsewC jyHuJi"
        data-testid="20"
        id="20"
        name="20"
      >
        20
      </button>
      <button
        class="sc-gKsewC jyHuJi"
        data-testid="40"
        id="40"
        name="40"
      >
        40
      </button>
      <button
        class="sc-gKsewC jyHuJi"
        data-testid="80"
        id="80"
        name="80"
      >
        80
      </button>
      Entries
    </div>
    <table
      class="sc-bdfBwQ SZIUD"
    >
      <thead
        class="sc-gsTCUz eVsNgG"
      >
        <tr
          class="sc-dlfnbm fhHUUt"
        >
          <th
            class="sc-hKgILt eemWPu"
          >
            Name
          </th>
          <th
            class="sc-hKgILt eemWPu"
          >
            Authors
          </th>
          <th
            class="sc-hKgILt eemWPu"
          >
            Publication Year
          </th>
          <th
            class="sc-hKgILt eemWPu"
          >
            Publication Location
          </th>
          <th
            class="sc-hKgILt eemWPu"
          >
            Pages
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="sc-dlfnbm fhHUUt"
        >
          <td
            class="sc-eCssSg hMVDoG"
            title="Name"
          >
            Book Title
          </td>
          <td
            class="sc-eCssSg jMTdNr"
            title="Authors"
          >
            Author 1,Author 2
          </td>
          <td
            class="sc-eCssSg cWxcEj"
            title="Year"
          >
            2020
          </td>
          <td
            class="sc-eCssSg kkFOlx"
            title="Location"
          >
            City, Country
          </td>
          <td
            class="sc-eCssSg fPEa-ds"
            title="Pages"
          >
            104
          </td>
        </tr>
      </tbody>
    </table>
    <div
      style="display: flex; padding: 16px 0px;"
    >
      <button
        class="sc-gKsewC jyHuJi"
        disabled=""
        name="Previous"
      >
        Previous
      </button>
      <button
        class="sc-gKsewC fzYsXG"
        data-testid="1"
        id="1"
        name="1"
      >
        1
      </button>
      <button
        class="sc-gKsewC jyHuJi"
        data-testid="2"
        id="2"
        name="2"
      >
        2
      </button>
      <button
        class="sc-gKsewC jyHuJi"
        data-testid="3"
        id="3"
        name="3"
      >
        3
      </button>
      <button
        class="sc-gKsewC jyHuJi"
        data-testid="4"
        id="4"
        name="4"
      >
        4
      </button>
      <button
        class="sc-gKsewC jyHuJi"
        data-testid="5"
        id="5"
        name="5"
      >
        5
      </button>
      <button
        class="sc-gKsewC jyHuJi"
        data-testid="6"
        id="6"
        name="6"
      >
        6
      </button>
      <button
        class="sc-gKsewC jyHuJi"
        name="Next"
      >
        Next
      </button>
    </div>
  </div>
</div>
`;

exports[`Books should render Books Not Found 1`] = `
<div>
  <div
    class="sc-iBPRYJ gokKvP"
  >
    <h3
      class="sc-jSgupP lnXuzl"
    >
      Find My Books
    </h3>
    <div
      style="display: flex; align-items: center; padding: 16px 0px;"
    >
      Show
      <button
        class="sc-gKsewC jyHuJi"
        data-testid="10"
        id="10"
        name="10"
      >
        10
      </button>
      <button
        class="sc-gKsewC fzYsXG"
        data-testid="20"
        id="20"
        name="20"
      >
        20
      </button>
      <button
        class="sc-gKsewC jyHuJi"
        data-testid="40"
        id="40"
        name="40"
      >
        40
      </button>
      <button
        class="sc-gKsewC jyHuJi"
        data-testid="80"
        id="80"
        name="80"
      >
        80
      </button>
      Entries
    </div>
    <table
      class="sc-bdfBwQ SZIUD"
    >
      <thead
        class="sc-gsTCUz eVsNgG"
      >
        <tr
          class="sc-dlfnbm fhHUUt"
        >
          <th
            class="sc-hKgILt eemWPu"
          >
            Name
          </th>
          <th
            class="sc-hKgILt eemWPu"
          >
            Authors
          </th>
          <th
            class="sc-hKgILt eemWPu"
          >
            Publication Year
          </th>
          <th
            class="sc-hKgILt eemWPu"
          >
            Publication Location
          </th>
          <th
            class="sc-hKgILt eemWPu"
          >
            Pages
          </th>
        </tr>
      </thead>
      <tbody />
    </table>
    <div
      style="display: flex; justify-content: center; align-items: center; min-height: 600px;"
    >
      <h3
        class="sc-jSgupP lnXuzl"
      >
        No Books found!!
      </h3>
    </div>
  </div>
</div>
`;

exports[`Books should render Books Not Found when error 1`] = `
<div>
  <div
    class="sc-iBPRYJ gokKvP"
  >
    <h3
      class="sc-jSgupP lnXuzl"
    >
      Find My Books
    </h3>
    <div
      style="display: flex; align-items: center; padding: 16px 0px;"
    >
      Show
      <button
        class="sc-gKsewC jyHuJi"
        data-testid="10"
        id="10"
        name="10"
      >
        10
      </button>
      <button
        class="sc-gKsewC jyHuJi"
        data-testid="20"
        id="20"
        name="20"
      >
        20
      </button>
      <button
        class="sc-gKsewC jyHuJi"
        data-testid="40"
        id="40"
        name="40"
      >
        40
      </button>
      <button
        class="sc-gKsewC jyHuJi"
        data-testid="80"
        id="80"
        name="80"
      >
        80
      </button>
      Entries
    </div>
    <table
      class="sc-bdfBwQ SZIUD"
    >
      <thead
        class="sc-gsTCUz eVsNgG"
      >
        <tr
          class="sc-dlfnbm fhHUUt"
        >
          <th
            class="sc-hKgILt eemWPu"
          >
            Name
          </th>
          <th
            class="sc-hKgILt eemWPu"
          >
            Authors
          </th>
          <th
            class="sc-hKgILt eemWPu"
          >
            Publication Year
          </th>
          <th
            class="sc-hKgILt eemWPu"
          >
            Publication Location
          </th>
          <th
            class="sc-hKgILt eemWPu"
          >
            Pages
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="sc-dlfnbm bqEDSD"
        >
          <td
            class="sc-eCssSg gGGlRr"
            title="Name"
          />
          <td
            class="sc-eCssSg erUswG"
            title="Authors"
          />
          <td
            class="sc-eCssSg jhCely"
            title="Year"
          />
          <td
            class="sc-eCssSg ShpYU"
            title="Location"
          />
          <td
            class="sc-eCssSg bkMOxV"
            title="Pages"
          />
        </tr>
        <tr
          class="sc-dlfnbm bqEDSD"
        >
          <td
            class="sc-eCssSg gGGlRr"
            title="Name"
          />
          <td
            class="sc-eCssSg erUswG"
            title="Authors"
          />
          <td
            class="sc-eCssSg jhCely"
            title="Year"
          />
          <td
            class="sc-eCssSg ShpYU"
            title="Location"
          />
          <td
            class="sc-eCssSg bkMOxV"
            title="Pages"
          />
        </tr>
      </tbody>
    </table>
    <div
      style="display: flex; justify-content: center; align-items: center; min-height: 600px;"
    >
      <h3
        class="sc-jSgupP lnXuzl"
      >
        Something Gone Wrong!!! Please try later
      </h3>
    </div>
  </div>
</div>
`;

exports[`Books should render Books in Loading State 1`] = `
<div>
  <div
    class="sc-iBPRYJ gokKvP"
  >
    <h3
      class="sc-jSgupP lnXuzl"
    >
      Find My Books
    </h3>
    <div
      style="display: flex; align-items: center; padding: 16px 0px;"
    >
      Show
      <button
        class="sc-gKsewC jyHuJi"
        data-testid="10"
        id="10"
        name="10"
      >
        10
      </button>
      <button
        class="sc-gKsewC jyHuJi"
        data-testid="20"
        id="20"
        name="20"
      >
        20
      </button>
      <button
        class="sc-gKsewC jyHuJi"
        data-testid="40"
        id="40"
        name="40"
      >
        40
      </button>
      <button
        class="sc-gKsewC jyHuJi"
        data-testid="80"
        id="80"
        name="80"
      >
        80
      </button>
      Entries
    </div>
    <table
      class="sc-bdfBwQ SZIUD"
    >
      <thead
        class="sc-gsTCUz eVsNgG"
      >
        <tr
          class="sc-dlfnbm fhHUUt"
        >
          <th
            class="sc-hKgILt eemWPu"
          >
            Name
          </th>
          <th
            class="sc-hKgILt eemWPu"
          >
            Authors
          </th>
          <th
            class="sc-hKgILt eemWPu"
          >
            Publication Year
          </th>
          <th
            class="sc-hKgILt eemWPu"
          >
            Publication Location
          </th>
          <th
            class="sc-hKgILt eemWPu"
          >
            Pages
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="sc-dlfnbm bqEDSD"
        >
          <td
            class="sc-eCssSg gGGlRr"
            title="Name"
          />
          <td
            class="sc-eCssSg erUswG"
            title="Authors"
          />
          <td
            class="sc-eCssSg jhCely"
            title="Year"
          />
          <td
            class="sc-eCssSg ShpYU"
            title="Location"
          />
          <td
            class="sc-eCssSg bkMOxV"
            title="Pages"
          />
        </tr>
        <tr
          class="sc-dlfnbm bqEDSD"
        >
          <td
            class="sc-eCssSg gGGlRr"
            title="Name"
          />
          <td
            class="sc-eCssSg erUswG"
            title="Authors"
          />
          <td
            class="sc-eCssSg jhCely"
            title="Year"
          />
          <td
            class="sc-eCssSg ShpYU"
            title="Location"
          />
          <td
            class="sc-eCssSg bkMOxV"
            title="Pages"
          />
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
